@@ -8,6 +8,9 @@
 #
 #==============================================================
 
+R1.2.10  26-Aug-2025  M. Dunning (mdunning)
+        TESTFAC: Add ESA scope
+
 R1.2.9  25-Jun-2025  M. Dunning (mdunning)
         Bump modules and add tirpc lib to support rhel9 build
 
